crates/stackable-versioned-macros/tests/snapshots/stackable_versioned_macros__test__default_snapshots@attribute_struct.rs.snap
---
source: crates/stackable-versioned-macros/src/lib.rs
expression: formatted
input_file: crates/stackable-versioned-macros/fixtures/inputs/default/attribute_struct.rs
---
#[automatically_derived]
mod v1alpha1 {
    use super::*;
    /// Test
    #[derive(Default)]
    pub struct Foo {
        /// This field is available in every version (so far).
        pub foo: String,
        /// Keep the main field docs the same, even after the field is deprecated.
        pub bar: String,
        /// This is will keep changing over time.
        pub qoox: String,
    }
}
#[automatically_derived]
mod v1beta1 {
    use super::*;
    ///Additional docs for this version which are purposefully long to
    ///show how manual line wrapping works. \
    ///Multi-line docs are also supported, as per regular doc-comments.
    /// Test
    #[derive(Default)]
    pub struct Foo {
        /// This field is available in every version (so far).
        pub foo: String,
        /// Keep the main field docs the same, even after the field is deprecated.
        #[deprecated = "gone"]
        pub deprecated_bar: String,
        /// This is for baz
        pub baz: String,
        /// This is will keep changing over time.
        pub qaax: String,
    }
}
#[automatically_derived]
mod v1beta2 {
    use super::*;
    /// Test
    #[derive(Default)]
    pub struct Foo {
        /// This field is available in every version (so far).
        pub foo: String,
        /// Keep the main field docs the same, even after the field is deprecated.
        #[deprecated]
        pub deprecated_bar: String,
        /// This is for baz
        pub baz: String,
        /// This is will keep changing over time.
        pub qaax: String,
    }
}
#[automatically_derived]
mod v1 {
    use super::*;
    /// Test
    #[derive(Default)]
    pub struct Foo {
        /// This field is available in every version (so far).
        pub foo: String,
        /// Keep the main field docs the same, even after the field is deprecated.
        #[deprecated]
        pub deprecated_bar: String,
        /// This is for baz
        pub baz: String,
        /// This is will keep changing over time.
        pub quux: String,
    }
}
#[automatically_derived]
mod v2 {
    use super::*;
    /// Test
    #[derive(Default)]
    pub struct Foo {
        /// This field is available in every version (so far).
        pub foo: String,
        /// Keep the main field docs the same, even after the field is deprecated.
        #[deprecated]
        pub deprecated_bar: String,
        /// This is for baz
        pub baz: String,
        /// This is will keep changing over time.
        pub quux: String,
    }
}
